# vkpt

./: .gitignore  CMakeLists.txt
shaders/: simple.vert
src/: app.cpp  app.h  buffer.cpp  buffer.h  descriptor.cpp  descriptor.h  device.cpp  device.h  main.cpp  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utils.cpp  utils.h  window.cpp  window.h
